--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@mui/material": "^5.10.14",
-    "@stripe/stripe-js": "^1.25.0",
+    "@stripe/react-stripe-js": "^1.15.0",
+    "@stripe/stripe-js": "^1.44.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
