--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@material/fab": "^14.0.0",
+    "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@stripe/react-stripe-js": "^1.15.0",
     "@stripe/stripe-js": "^1.44.1",
@@ -14,7 +16,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "canvas-confetti": "^1.6.0",
     "mdb-react-ui-kit": "^5.0.0",
+    "pretty-interaction-icons": "^1.1.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
@@ -26,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
     "stripe": "^8.209.0",
+    "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
